syntax = "proto3";

package api.user.v1;

option go_package = "chatgpt-admin-server/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

import "google/api/annotations.proto";
import "validate/validate.proto";

service User {
	rpc Login (LoginRequest) returns (LoginReply) {
		option (google.api.http) = {
      post: "/api/v1/login"
      body: "body"
    };
	};
	rpc Register (RegisterRequest) returns (RegisterReply) {
		option (google.api.http) = {
      post: "/api/v1/users"
      body: "body"
    };
	};
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
	rpc DeletetUser (DeleteUserRequest) returns (DeleteUserReply);
}

message LoginRequest {
	message Body {
		string username = 1 [json_name="username"];
	  string password = 2 [json_name="password"];
	}
	Body body = 1 [json_name="body"];
}
message LoginReply {
	string msg = 1 [json_name="msg"];
}

message RegisterRequest {
	message Body {
		string username = 1 [json_name="username"];
	  string password = 2 [json_name="password"];
	  string email = 3 [json_name="email"];
	  string code = 4 [json_name="code"];
	}
	Body body = 1 [json_name="body"];
}
message RegisterReply {
	string msg = 1 [json_name="msg"];
}

message GetUserRequest {}
message GetUserReply {}

message ListUserRequest {}
message ListUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}